--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 {% load staticfiles %}
+{% load rango_template_tags %}
 
 <html>
-    <head>
+    <head lang="en">
+        <meta charset="utf-8" />
         <title>
             Rango -
             {% block title_block %}
@@ -14,6 +16,11 @@
         <div>
         {% block body_block %}
         {% endblock %}
+        </div>
+        <div> 
+            {% block sidebar_block %}
+                {% get_category_list category %}
+            {% endblock %}
         </div>
         <hr />
         <div>
