--- a/templates/rango/base.html
+++ b/templates/rango/base.html
@@ -17,7 +17,7 @@
         {% block body_block %}
         {% endblock %}
         </div>
-        <div> 
+        <div>
             {% block sidebar_block %}
                 {% get_category_list category %}
             {% endblock %}
@@ -28,6 +28,7 @@
                 <li><a href="{% url 'rango:add_category' %}">Add a New Category</a></li>
                 <li><a href="{% url 'rango:about' %}">About</a></li>
                 <li><a href="{% url 'rango:index' %}">Index</a></li>
+                <li><a href="{% url 'rango:register' %}">Sign Up</a></li>
             </ul>
         </div>
     </body>
