--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,6 +11,7 @@
         here is the about page. <br />
         <strong>{{ aboutmessage }}</strong><br />
     </div>
+    <p>Visits: {{ visits }}</p><br />
     <div>
         <img src="/static/images/rango.jpg" alt="Picture of Rango" /><br />
         <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
